Fix product price alignment

--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,8 @@ button {
 
 .product__price {
   font-size: 2.5em;
-  font-weight: bold; }
+  font-weight: bold;
+  margin-top: auto; }
 
 .product__image {
   width: 200px;
