--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -43,6 +43,7 @@
 .product__price {
   font-size: 2.5em;
   font-weight: bold;
+  margin-top: auto;
 }
 
 .product__image {
